force-app/main/default/objects/Supplier__c/validationRules/Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Active</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  Active__c = True,
      NOT( ISBLANK( Contract_End_Date__c  )),
       Contract_End_Date__c &lt;  TODAY() 
     )</errorConditionFormula>
    <errorMessage>Cannot mark supplier as Active. The contract has already expired.</errorMessage>
</ValidationRule>