force-app/main/default/objects/Supplier__c/validationRules/Active_Supplier.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Supplier</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Active__c = True,
        ISBLANK( Contract_End_Date__c ) )</errorConditionFormula>
    <errorMessage>Active suppliers must have a contract end date.</errorMessage>
</ValidationRule>