force-app/main/default/objects/Supplier__c/validationRules/Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Email</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   Active__c  = TRUE,
  ISBLANK( Email__c )
)</errorConditionFormula>
    <errorMessage>Active suppliers must have a valid email address.</errorMessage>
</ValidationRule>