force-app/main/default/objects/Supplier__c/validationRules/Email_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Format</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK( Email__c )),
  NOT(REGEX(Email__c , &quot;^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,4}$&quot;))
)</errorConditionFormula>
    <errorMessage>Enter a valid email format (e.g., name@example.com)</errorMessage>
</ValidationRule>