force-app/main/default/objects/Supplier__c/validationRules/Performance_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Performance_Rating</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Active__c = True,
      ISBLANK(  TEXT(Performance_Rating__c)  ) )</errorConditionFormula>
    <errorMessage>Please assign a performance rating for all active suppliers.</errorMessage>
</ValidationRule>