force-app/main/default/objects/Supplier__c/validationRules/Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(  ISBLANK( Contact_Person__c )) ,
       ISBLANK( Phone__c ) )</errorConditionFormula>
    <errorMessage>Phone number must be entered if a contact name is provided.</errorMessage>
</ValidationRule>