force-app/main/default/objects/Supplier__c/validationRules/Phone_number_must_be_10_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_must_be_10_digits</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Phone__c, &quot;\\d{10}&quot;))</errorConditionFormula>
    <errorMessage>Phone number must be exactly 10 digits.</errorMessage>
</ValidationRule>