force-app/main/default/objects/Supplier__c/validationRules/Supplier_Contract_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Supplier_Contract_Date</fullName>
    <active>true</active>
    <description>End Date must be ≥ Start Date.</description>
    <errorConditionFormula>AND
   ( NOT( ISBLANK( Contract_Start_Date__c ) ) ,
     NOT( ISBLANK( Contract_Start_Date__c ) ),
   Contract_End_Date__c &lt;  Contract_Start_Date__c 
)</errorConditionFormula>
    <errorMessage>Contract End Date must be after the Start Date.</errorMessage>
</ValidationRule>